[package]
name = "quasar_indexer"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "quasar_entities", "quasar_migrations", "stellar_node_entities"]

[workspace.dependencies]
sea-orm = "0.12.2"
async-graphql = "6.0.7"
async-graphql-axum = "6.0.7"
thiserror = "1.0"
stellar-xdr = "20.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql-axum = { workspace = true }
async-graphql = { workspace = true, features = ["playground"] }
axum = "0.6"
axum-prometheus = "0.4.0"
clap = { version = "4.4.2", features = ["derive"] }
config = "0.13.3"
log = "0.4.20"
log4rs = "1.2.0"
prometheus = { version = "0.13.3", features = ["process"] }
quasar_entities = { path = "quasar_entities" }
quasar_migrations = { path = "quasar_migrations" }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "with-json",
] }
serde = { version = "1.0.188", features = ["derive"] }
stellar_node_entities = { path = "stellar_node_entities" }
stellar-xdr = { workspace = true, features = ["base64"] }
stellar-strkey = { git = "https://github.com/stellar/rs-stellar-strkey" }
soroban-env-host = "20.0.0"
thiserror.workspace = true
tokio = { version = "1.32.0", features = ["full"] }