[package]
name = "quasar_entities"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true, features = ["decimal", "chrono", "dataloader"] }
base64 = "0.21.4"
sea-orm = { workspace = true }
stellar_node_entities = { path = "../stellar_node_entities" }
stellar-xdr = { version = "20.0.0-rc1", features = ["base64"] }
thiserror.workspace = true