[package]
name = "quasar_entities"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true, features = ["decimal", "chrono", "dataloader"] }
base64 = "0.21.4"
sea-orm = { workspace = true }
serde_json = "1.0"
stellar_node_entities = { path = "../stellar_node_entities" }
stellar-xdr = { workspace = true, features = ["base64", "serde_json"] }
stellar-strkey = { git = "https://github.com/stellar/rs-stellar-strkey" }
soroban-env-host = "20.0.0"
thiserror.workspace = true

